Almost completed Item and Client
