# app/Http/Controllers/ClientController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\Client;
+use App\Models\User;
 use Illuminate\Http\Request;
 
 class ClientController extends Controller
@@ -14,7 +15,7 @@ class ClientController extends Controller
      */
     public function index()
     {
-        //
+        return Client::all();
     }
 
     /**
@@ -35,18 +36,41 @@ class ClientController extends Controller
      */
     public function store(Request $request)
     {
-        //
+        $request->validate([
+            'client.email' => 'required|string',
+            'client.password' => 'required|string',
+            'client.name' => 'required|string',
+            'client.image_id' => 'required|integer'
+        ]);
+        
+        $user = User::create([
+            'email' => $request->input('client.email'),
+            'password' => $request->input('client.password')        
+        ]);
+
+        Client::create([
+            'id' => $user->id,
+            'name' => $request->input('client.name'),
+            'image_id' => $request->input('client.image_id')        
+        ]);
+
+        return response('', 204)->header('description', 'Successfully created the client');
     }
 
     /**
-     * Display the specified resource.
+     * Display the spePified resource.
      *
-     * @param  \App\Models\Client  $client
      * @return \Illuminate\Http\Response
      */
-    public function show(Client $client)
-    {
-        //
+    public function show($id)
+    {   
+        //Merge não está a funcionar nao sei pq 
+        $client = Client::where('id', '=', $id)->get();
+        $user = User::where('id', '=', $id)->get();
+
+        $merged = $client->merge($user); 
+
+        return $merged;
     }
 
     /**
@@ -67,9 +91,50 @@ class ClientController extends Controller
      * @param  \App\Models\Client  $client
      * @return \Illuminate\Http\Response
      */
-    public function update(Request $request, Client $client)
-    {
-        //
+    public function update(Request $request, $id)
+    {   // Testado!
+        $request->validate([
+            'client.email' => 'string',
+            'client.password' => 'string',
+            'client.name' => 'string',
+            'client.image_id' => 'integer'
+        ]);
+
+        if(!is_numeric($id)){
+            return response('', 404)->header('description','The client was not found');
+        }
+
+        $client = Client::where('id', '=', $id)->get();
+        $user = User::where('id', '=', $id)->get();
+        
+        
+        if($client->isEmpty()){
+            return response('', 404)->header('description','The client was not found');
+        }
+
+        $client_data = $client->first();
+        $user_data = $user->first();
+
+        if($request->has('client.email')){
+            $user_data->email = $request->input('client.email'); 
+        }
+
+        if($request->has('client.password')){
+            $user_data->password = $request->input('client.password'); 
+        }
+
+        if($request->has('client.name')){
+            $client_data->name = $request->input('client.name'); 
+        }
+
+        if($request->has('client.image_id')){
+            $client_data->image_id = $request->input('client.image_id'); 
+        }
+
+        $user_data->save();
+        $client_data->save();
+        
+        return response('', 204,)->header('description', 'Successfully updated client information');
     }
 
     /**
@@ -78,8 +143,18 @@ class ClientController extends Controller
      * @param  \App\Models\Client  $client
      * @return \Illuminate\Http\Response
      */
-    public function destroy(Client $client)
-    {
-        //
+    public function destroy($id)
+    {   //postgres não deixa apagar
+        $client = Client::where('id', '=', $id);
+        $user = User::where('id', '=', $id);
+        
+        if($client->get()->isEmpty() || $user->get()->isEmpty()){
+            return response('', 404,)->header('description', 'Client not found');
+        }
+
+        $client->delete();
+        $user-> delete();
+
+        return response('', 204,)->header('description', 'Successfully deleted the client');
     }
 }
