# routes/web.php
@@ -20,7 +20,19 @@ Route::get('/api/coupon/{couponCode}', 'CouponController@show');
 Route::put('/api/coupon/{couponCode}', 'CouponController@update');
 Route::delete('/api/coupon/{couponCode}', 'CouponController@destroy');
 
+// Client
+Route::get('/api/client', 'ClientController@index');
+//Route::post('/api/client', 'ClientController@store');
+Route::get('/api/client/{id}', 'ClientController@show');
+Route::put('/api/client/{id}', 'ClientController@update');
+Route::delete('/api/client/{id}', 'ClientController@destroy');
 
+// Item
+Route::get('/api/item', 'ItemController@index');
+//Route::post('/api/item', 'ClientController@store');
+Route::get('/api/item/{id}', 'ItemController@show');
+Route::put('/api/item/{id}', 'ItemController@update');
+Route::delete('/api/item/{id}', 'ItemController@destroy');
 
 // Route::get('/', 'Auth\LoginController@home');
 
